// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/search_bar/SearchBar should match snapshot with search 1`] = `
<div>
  <div
    class="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autocomplete="off"
      class="search__form"
      role="search"
      style="overflow: visible;"
    >
      <div
        class="search__font-icon"
      >
        <i
          class="icon icon-magnify icon-16"
        />
      </div>
      <div
        class="w-full"
      >
        <div
          class="suggestion-box-input-wrapper"
        >
          <div
            class="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-controls="suggestionList"
              aria-describedby="searchbar-help-popup"
              aria-expanded="false"
              aria-label="Search"
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="search-bar form-control a11y__region"
              data-a11y-sort-order="9"
              id="searchBox"
              placeholder="Search"
              role="combobox"
              spellcheck="false"
              style="caret-color: transparent; color: transparent; opacity: 0.01; position: relative; z-index: 1;"
              tabindex="0"
              type="search"
              value="test"
            />
            <button
              class="input-clear visible"
              data-testid="input-clear"
            >
              <span
                aria-hidden="true"
                class="input-clear-x"
              >
                <i
                  class="icon icon-close-circle"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot with search, with searchType 1`] = `
<div>
  <div
    class="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autocomplete="off"
      class="search__form"
      role="search"
      style="overflow: visible;"
    >
      <div
        class="search__font-icon"
      >
        <i
          class="icon icon-magnify icon-16"
        />
      </div>
      <div
        class="searchTypeBadge"
      >
        FILES
        <i
          class="icon icon-close icon-12"
        />
      </div>
      <div
        class="w-full"
      >
        <div
          class="suggestion-box-input-wrapper"
        >
          <div
            class="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-controls="suggestionList"
              aria-describedby="searchbar-help-popup"
              aria-expanded="false"
              aria-label="Search"
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="search-bar form-control a11y__region"
              data-a11y-sort-order="9"
              id="searchBox"
              placeholder="Search"
              role="combobox"
              spellcheck="false"
              style="caret-color: transparent; color: transparent; opacity: 0.01; position: relative; z-index: 1;"
              tabindex="0"
              type="search"
              value="test"
            />
            <button
              class="input-clear visible"
              data-testid="input-clear"
            >
              <span
                aria-hidden="true"
                class="input-clear-x"
              >
                <i
                  class="icon icon-close-circle"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search 1`] = `
<div>
  <div
    class="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autocomplete="off"
      class="search__form"
      role="search"
      style="overflow: visible;"
    >
      <div
        class="search__font-icon"
      >
        <i
          class="icon icon-magnify icon-16"
        />
      </div>
      <div
        class="w-full"
      >
        <div
          class="suggestion-box-input-wrapper"
        >
          <div
            class="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-controls="suggestionList"
              aria-describedby="searchbar-help-popup"
              aria-expanded="false"
              aria-label="Search"
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="search-bar form-control a11y__region"
              data-a11y-sort-order="9"
              id="searchBox"
              placeholder="Search"
              role="combobox"
              spellcheck="false"
              style="caret-color: transparent; color: transparent; opacity: 0.01; position: relative; z-index: 1;"
              tabindex="0"
              type="search"
              value=""
            />
            
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search, with searchType 1`] = `
<div>
  <div
    class="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autocomplete="off"
      class="search__form"
      role="search"
      style="overflow: visible;"
    >
      <div
        class="search__font-icon"
      >
        <i
          class="icon icon-magnify icon-16"
        />
      </div>
      <div
        class="searchTypeBadge"
      >
        FILES
        <i
          class="icon icon-close icon-12"
        />
      </div>
      <div
        class="w-full"
      >
        <div
          class="suggestion-box-input-wrapper"
        >
          <div
            class="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-controls="suggestionList"
              aria-describedby="searchbar-help-popup"
              aria-expanded="false"
              aria-label="Search"
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="search-bar form-control a11y__region"
              data-a11y-sort-order="9"
              id="searchBox"
              placeholder="Search"
              role="combobox"
              spellcheck="false"
              style="caret-color: transparent; color: transparent; opacity: 0.01; position: relative; z-index: 1;"
              tabindex="0"
              type="search"
              value=""
            />
            
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/search_bar/SearchBar should match snapshot without search, without searchType 1`] = `
<div>
  <div
    class="search-form__container"
    id="searchFormContainer"
  >
    <form
      aria-labelledby="searchBox"
      autocomplete="off"
      class="search__form"
      role="search"
      style="overflow: visible;"
    >
      <div
        class="search__font-icon"
      >
        <i
          class="icon icon-magnify icon-16"
        />
      </div>
      <div
        class="w-full"
      >
        <div
          class="suggestion-box-input-wrapper"
        >
          <div
            class="input-wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-controls="suggestionList"
              aria-describedby="searchbar-help-popup"
              aria-expanded="false"
              aria-label="Search"
              autocapitalize="off"
              autocomplete="off"
              autocorrect="off"
              class="search-bar form-control a11y__region"
              data-a11y-sort-order="9"
              id="searchBox"
              placeholder="Search"
              role="combobox"
              spellcheck="false"
              style="caret-color: transparent; color: transparent; opacity: 0.01; position: relative; z-index: 1;"
              tabindex="0"
              type="search"
              value=""
            />
            
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
